--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,10 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/ec2_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "echo 'SSH connection successful'"
 
+      - name: Copy the JAR file to EC2
+        run: |
+           scp -v -i ~/.ssh/new-ec2-key.pem cs203system/build/libs/cs203system-0.0.1-SNAPSHOT.jar ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/CS203/backend/
+
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.5
         with:
@@ -99,15 +103,8 @@ jobs:
             # Ensure the backend directory exists on EC2
             mkdir -p ~/CS203/backend
             
-            # Ensure the file is present
-            ls -la cs203system/build/libs/
-            
-            # Copy the JAR file to EC2
-            scp -i ~/.ssh/new-ec2-key.pem cs203system/build/libs/cs203system-0.0.1-SNAPSHOT.jar ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/CS203/backend/
-            
             # Stop the current backend service if running
             pkill -f "cs203system.jar" || true
             
             # Run the new JAR file
-            nohup java -jar /home/ubuntu/CS203/backend/cs203system-0.0.1-SNAPSHOT.jar > output.log 2>&1 &
-
+            nohup java -jar /home/${{ secrets.EC2_USER }}/CS203/backend/cs203system-0.0.1-SNAPSHOT.jar > output.log 2>&1 &
