--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,7 +97,7 @@ jobs:
 
       - name: Copy the JAR file to EC2
         run: |
-           scp -v -i ~/.ssh/ec2-key.pem cs203system/build/libs/cs203system-0.0.1-SNAPSHOT.jar ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/CS203/backend/
+           scp -v -i ~/.ssh/ec2_key.pem cs203system/build/libs/cs203system-0.0.1-SNAPSHOT.jar ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/CS203/backend/
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.5
