--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,4 +114,4 @@ jobs:
             pkill -f "cs203system.jar" || true
             
             # Run the new JAR file
-            nohup java -jar /home/${{ secrets.EC2_USER }}/CS203/backend/cs203system-0.0.1-SNAPSHOT.jar > output.log 2>&1 &
+            java -jar /home/${{ secrets.EC2_USER }}/CS203/backend/cs203system-0.0.1-SNAPSHOT.jar > output.log 2>&1 &
