--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,7 +106,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           debug: true
-          command_timeout: 1200
+          command_timeout: 1200s
           script: |
             # Ensure the backend directory exists on EC2
             mkdir -p ~/CS203/backend
