--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,119 +1,30 @@
-name: CI/CD Pipeline
+name: ci
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
-  build_and_test:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          node-version: '18'
-
-      - name: Install dependencies
-        working-directory: frontend
-        run: npm install
-
-      - name: Run linting
-        working-directory: frontend
-        run: npm run lint
-
-      - name: Build project
-        working-directory: frontend
-        run: npm run build || true
-
-      - name: Set up JDK
-        uses: actions/setup-java@v3
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and test
+        uses: docker/build-push-action@v6
         with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Grant execute permission for gradlew
-        working-directory: cs203system
-        run: chmod +x gradlew
-
-      - name: Build JAR
-        working-directory: cs203system
-        run: ./gradlew build
-
-        # New step to check the directory for the JAR file
-      - name: Verify JAR file location
-        run: ls -la cs203system/build/libs/
-
-
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build_and_test
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+          target: test
+          load: true
+      - name: Build and push
+        uses: docker/build-push-action@v6
         with:
-          java-version: '17'
-          distribution: 'temurin' # or 'zulu' if you prefer that distribution
-
-      - name: Grant execute permission for Gradle wrapper
-        working-directory: cs203system
-        run: chmod +x gradlew
-
-      - name: Build JAR
-        working-directory: cs203system
-        run: ./gradlew build
-
-      - name: Verify JAR file location
-        run: ls -la cs203system/build/libs/
-
-      - name: Set up SSH key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/ec2_key.pem
-          chmod 600 ~/.ssh/ec2_key.pem
-
-      - name: Verify SSH Key Existence
-        run: ls -la ~/.ssh/
-
-      - name: Test SSH Connection with Debugging
-        run: |
-          ssh -vvv -o StrictHostKeyChecking=no -i ~/.ssh/ec2_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "echo 'SSH connection successful'"
-
-      - name: Connect to EC2 and Run Command
-        run: |
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/ec2_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "echo 'SSH connection successful'"
-
-      - name: Copy the JAR file to EC2
-        run: |
-           scp -v -i ~/.ssh/ec2_key.pem cs203system/build/libs/cs203system-0.0.1-SNAPSHOT.jar ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/CS203/backend/
-
-      - name: Deploy to EC2
-        uses: appleboy/ssh-action@v0.1.5
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          debug: true
-          timeout: 30m       # Total session timeout (adjust as needed)
-          command_timeout: 10m  # Each command within the session can take up to 10 minutes
-          script: |
-            # Ensure the backend directory exists on EC2
-            mkdir -p ~/CS203/backend
-            
-            # Stop the current backend service if running
-            pkill -f "cs203system.jar" || true
-            
-            # Run the new JAR file
-            java -jar /home/${{ secrets.EC2_USER }}/CS203/backend/cs203system-0.0.1-SNAPSHOT.jar > output.log 2>&1 &
+          platforms: linux/amd64,linux/arm64
+          push: true
+          target: final
+          tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
