--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          platforms: linux/amd64,linux/arm64
-          push: true
-          target: final
-          tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
+          context: ./cs203system  # Path where the Dockerfile is located
+          file: ./cs203system/Dockerfile  # Path to the Dockerfile
+          tags: ${{ secrets.DOCKER_USERNAME }}/$(github.event.repository.name):latest
+          load: true
