--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: ci
+name: Deploy Docker Image from Docker Hub
 
 on:
   push:
@@ -6,25 +6,30 @@ on:
       - main
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - name: Set up SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/ec2_key.pem
+          chmod 600 ~/.ssh/ec2_key.pem
+
+      - name: Pull and Run Docker Image on EC2
+        uses: appleboy/ssh-action@v0.1.5
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Build and test
-        uses: docker/build-push-action@v6
-        with:
-          target: test
-          load: true
-      - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          context: ./cs203system  # Path where the Dockerfile is located
-          file: ./cs203system/Dockerfile  # Path to the Dockerfile
-          tags: ${{ secrets.DOCKER_USERNAME }}/$(github.event.repository.name):latest
-          load: true
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          debug: true
+          script: |
+            # Stop any existing container with the same name
+            docker stop my-container || true
+            docker rm my-container || true
+
+            # Pull the Docker image from Docker Hub
+            docker pull ${{ secrets.DOCKER_USERNAME }}/cs203app:latest
+
+            # Run the Docker image
+            docker run -d --name my-container -p 8080:8080 ${{ secrets.DOCKER_USERNAME }}/your-image-name:latest
