--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,35 +1,44 @@
-name: Deploy Docker Image from Docker Hub
+name: Docker Image CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Set up SSH key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/ec2_key.pem
-          chmod 600 ~/.ssh/ec2_key.pem
-
-      - name: Pull and Run Docker Image on EC2
-        uses: appleboy/ssh-action@v0.1.5
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          debug: true
-          script: |
-            # Stop any existing container with the same name
-            docker stop my-container || true
-            docker rm my-container || true
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Grant execute permissions for Gradle wrapper
+        run: chmod +x ./gradlew
+        working-directory: ./cs203system
+      - name: Build with Gradle
+        run: ./gradlew build
+        working-directory: ./cs203system
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag themoderatecow/aws-cicd:latest
+        #        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        working-directory: ./cs203system
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to docker hub
+        run: docker push themoderatecow/aws-cicd:latest
 
-            # Pull the Docker image from Docker Hub
-            docker pull ${{ secrets.DOCKER_USERNAME }}/cs203app:latest
+  deploy:
+    needs: build
+    runs-on: self-hosted
+    steps:
+      - name: Pull from docker hub
+        run: docker pull themoderatecow/aws-cicd:latest
+      #      - name: Delete old container
+      #        run: docker rm -r spring-app-container
+      - name: Run docker container
+        run: docker run -d -p 8080:8080 --name spring-app-container themoderatecow/aws-cicd
 
-            # Run the Docker image
-            docker run -d --name my-container -p 8080:8080 ${{ secrets.DOCKER_USERNAME }}/cs203app:latest
