--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,83 +1,44 @@
-name: CI/CD Pipeline
+name: Docker Image CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
   pull_request:
-    branches:
-      - main
+    branches: [ "main" ]
 
 jobs:
-  build_and_test:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: Install dependencies
-        working-directory: frontend
-        run: npm install
-
-      - name: Run linting
-        working-directory: frontend
-        run: npm run lint
-
-      - name: Build project
-        working-directory: frontend
-        run: npm run build || true
-
-      - name: Set up JDK
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
-
-      - name: Grant execute permission for gradlew
-        working-directory: cs203system
-        run: chmod +x gradlew
-
-      - name: Build JAR
-        working-directory: cs203system
+      - name: Grant execute permissions for Gradle wrapper
+        run: chmod +x ./gradlew
+        working-directory: ./cs203system
+      - name: Build with Gradle
         run: ./gradlew build
-
-        # New step to check the directory for the JAR file
-      - name: Verify JAR file location
-        run: ls cs203system/build/libs/
-
-
+        working-directory: ./cs203system
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag themoderatecow/aws-cicd:latest
+        #        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        working-directory: ./cs203system
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to docker hub
+        run: docker push themoderatecow/aws-cicd:latest
 
   deploy:
-    runs-on: ubuntu-latest
-    needs: build_and_test
-
+    needs: build
+    runs-on: self-hosted
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Deploy to EC2
-        uses: appleboy/ssh-action@v0.1.5
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          debug: true
-          script: |
-            # Ensure the backend directory exists on EC2
-            mkdir -p ~/CS203/backend
-            
-            # Copy the JAR file to EC2
-            scp -i ~/.ssh/new-ec2-key.pem ./cs203system/build/libs/cs203system-0.0.1-SNAPSHOT.jar ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/CS203/backend/
-            
-            # Stop the current backend service if running
-            pkill -f "cs203system.jar" || true
-            
-            # Run the new JAR file
-            nohup java -jar /home/ubuntu/CS203/backend/cs203system-0.0.1-SNAPSHOT.jar > output.log 2>&1 &
+      - name: Pull from docker hub
+        run: docker pull themoderatecow/aws-cicd:latest
+      #      - name: Delete old container
+      #        run: docker rm -r spring-app-container
+      - name: Run docker container
+        run: docker run -d -p 8080:8080 --name spring-app-container themoderatecow/aws-cicd
 
