--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,22 +23,22 @@ jobs:
         run: ./gradlew build
         working-directory: ./cs203system
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag themoderatecow/aws-cicd:latest
+        run: docker build . --file Dockerfile --tag cs203someshit/aws-cicd:latest
         #        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
         working-directory: ./cs203system
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to docker hub
-        run: docker push themoderatecow/aws-cicd:latest
+        run: docker push cs203someshit/aws-cicd:latest
 
   deploy:
     needs: build
     runs-on: self-hosted
     steps:
       - name: Pull from docker hub
-        run: docker pull themoderatecow/aws-cicd:latest
+        run: docker pull cs203someshit/aws-cicd:latest
       #      - name: Delete old container
       #        run: docker rm -r spring-app-container
       - name: Run docker container
-        run: docker run -d -p 8080:8080 --name spring-app-container themoderatecow/aws-cicd
+        run: docker run -d -p 8080:8080 --name spring-app-container cs203someshit/aws-cicd
 
