--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,24 +23,29 @@ jobs:
         run: ./gradlew build
         working-directory: ./cs203system
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag cs203someshit/aws-cicd:latest
-        #        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        run: docker build . --file Dockerfile --tag cs203someshit/aws-cicd:${{ github.sha }}
         working-directory: ./cs203system
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to docker hub
-        run: docker push cs203someshit/aws-cicd:latest
+        run: docker push cs203someshit/aws-cicd:${{ github.sha }}
 
   deploy:
     needs: build
     runs-on: self-hosted
     steps:
       - name: Pull from docker hub
-        run: docker pull cs203someshit/aws-cicd:latest
+        run: docker pull cs203someshit/aws-cicd:${{ github.sha }}
       - name: Stop and remove existing container (if running)
         run: |
           docker stop spring-app-container || true
           docker rm spring-app-container || true
       - name: Run docker container
-        run: docker run -d -p 8080:8080 --name spring-app-container cs203someshit/aws-cicd
+        run: |
+          docker run -d -p 8080:8080 \
+            --name spring-app-container \
+            --restart unless-stopped \
+            --e DB_USERNAME=${{secrets.DATASOURCE_USERNAME}} \
+            --e DB_PASSWORD=${{secrets.DATASOURCE_PASSWORD}} \
+            cs203someshit/aws-cicd:${{ github.sha }}
 
