--- a/cs203system/src/main/resources/application.properties
+++ b/cs203system/src/main/resources/application.properties
@@ -18,11 +18,9 @@ spring.application.name=cs203system
 #spring.datasource.username=ubuntu
 #spring.datasource.password=password
 
-#spring.datasource.url=jdbc:postgresql://database-1.cnecmcwmig1r.ap-southeast-2.rds.amazonaws.com:5432/postgres
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.datasource.username=postgres
-#spring.datasource.password=lOcoatHK7t6QRbAB8sxJ
-#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://springdbinstance.chye02gwgz60.ap-southeast-2.rds.amazonaws.com:5432/postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Specify explicitly the dialect (here for PostgreSQL, adapt for your database)
 
@@ -40,14 +38,14 @@ logging.level.com.cs203.cs203system.utility=DEBUG
 
 
 # H2 Database configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=1234
-spring.sql.init.platform=h2
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=1234
+#spring.sql.init.platform=h2
 #
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 
 # ----------------------------------------------------------------- #
 # LOGGING #
