--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,14 +21,13 @@ jobs:
         working-directory: ./cs203system
       - name: Add Database connection
         env:
-          DB_HOST: ${{ secrets.DB_HOST }}
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-
+          DB_HOST: ${{ secrets.DATASOURCE_URL }}
+          DB_USER: ${{ secrets.DATASOURCE_USERNAME }}
+          DB_PASSWORD: ${{ secrets.DATASOURCE_PASSWORD }}
         run: |
-          echo "DB_HOST=$DB_HOST" >> ./cs203system/src/main/resources/application.properties
-          echo "DB_USER=$DB_USER" >> ./cs203system/src/main/resources/application.properties
-          echo "DB_PASSWORD=$DB_PASSWORD" >> ./cs203system/src/main/resources/application.properties
+          echo "spring.datasource.url=jdbc:postgresql://$DB_HOST:5432/postgres" >> ./cs203system/src/main/resources/application.properties
+          echo "spring.datasource.username=$DB_USER" >> ./cs203system/src/main/resources/application.properties
+          echo "spring.datasource.password=$DB_PASSWORD" >> ./cs203system/src/main/resources/application.properties
         working-directory: ./cs203system
       - name: Build with Gradle
         run: ./gradlew build
