--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Build the Docker image
         run: docker build --file Dockerfile \
             --build-arg DB_HOST=${DATASOURCE_URL} \
-            --build-arg DB_USER=${DB_USER} \
-            --build-arg DB_PASSWORD=${DB_PASSWORD} \
+            --build-arg DB_USER=${DATASOURCE_USERNAME} \
+            --build-arg DB_PASSWORD=${DATASOURCE_PASSWORD} \
             --tag cs203someshit/aws-cicd:${{ github.sha }} .
         working-directory: ./cs203system
       - name: Login to Docker Hub
