--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,12 +23,7 @@ jobs:
         run: ./gradlew build
         working-directory: ./cs203system
       - name: Build the Docker image
-        run: |
-            docker build --file Dockerfile
-            --build-arg DB_HOST=${DATASOURCE_URL} \
-            --build-arg DB_USER=${DATASOURCE_USERNAME} \
-            --build-arg DB_PASSWORD=${DATASOURCE_PASSWORD} \
-            --tag cs203someshit/aws-cicd:${{ github.sha }} .
+        run: docker build . --file Dockerfile --tag cs203someshit/aws-cicd:${{ github.sha }}
         working-directory: ./cs203system
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
@@ -49,5 +44,8 @@ jobs:
         run: |
           docker run -d -p 8080:8080 \
             --name spring-app-container \
+            --restart unless-stopped \
+            --e DB_USERNAME=${{secrets.DATASOURCE_USERNAME}} \
+            --e DB_PASSWORD=${{secrets.DATASOURCE_PASSWORD}} \
             cs203someshit/aws-cicd:${{ github.sha }}
 
