--- a/cs203system/src/main/resources/application.properties
+++ b/cs203system/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.application.name=cs203system
 #spring.datasource.username=ubuntu
 #spring.datasource.password=password
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Specify explicitly the dialect (here for PostgreSQL, adapt for your database)
 
@@ -36,14 +36,14 @@ logging.level.com.cs203.cs203system.utility=DEBUG
 
 
 # H2 Database configuration
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=1234
-#spring.sql.init.platform=h2
-#
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=1234
+spring.sql.init.platform=h2
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 # ----------------------------------------------------------------- #
 # LOGGING #
